@@ -18,10 +18,13 @@ sub MY::postamble {
 	# Linux: Either way
 	$out .= "LD = g++\n";
     }
+    # Note OPTIMIZE is passed from upper makefile, so this code needed there too.
     if ($Config{osname} =~ /cygwin/i || $Config{archname} =~ /cygwin/i) {
 	# Cygwin ExtUtils::MakeMaker ignores our LIBS declaration and says
 	# "No library found for -lstdc++".  Force it.
 	$out .= "LDLOADLIBS += -lstdc++\n";
+	# Cygwin: High optimization causes g++ "out of memory"
+	$out .= "OPTIMIZE += -O\n";
     }
     $out .= "CCFLAGS  += -Wall -Wno-unused -Werror\n" if $ENV{VERILATOR_AUTHOR_SITE};
     #$out .= "CCFLAGS += -O0 -ggdb\n" if $ENV{VERILATOR_AUTHOR_SITE};  print "%Warning: -O0 --gdb on, also FLEX -d on";
